--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:types": "tsc --noEmit",
     "test:unit": "cross-env BABEL_ENV=development NODE_ENV=test jest",
     "test": "yarn run test:types && yarn run test:unit",
-    "start": "yarn run test && yarn run build",
+    "start": "yarn run test && yarn run build"
   },
   "repository": {
     "type": "git",
